2026-top-it-main/lab5/self-work/data-anonymization-k8s/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sda-lab5
  labels:
    app.kubernetes.io/name: sda
    course.lab: "5"
