2026-top-it-main/lab5/self-work/data-anonymization-k8s/manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sda
  namespace: sda-lab5
  labels:
    app.kubernetes.io/name: sda
spec:
  ingressClassName: nginx
  rules:
    - host: sda.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sda-backend
                port:
                  name: http
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: sda-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sda-frontend
                port:
                  name: http
